@@ -39,7 +39,6 @@
 #include "api/ofa-itvfilterable.h"
 #include "api/ofa-itvsortable.h"
 #include "api/ofa-preferences.h"
-#include "api/ofa-settings.h"
 #include "api/ofo-account.h"
 #include "api/ofo-base.h"
 #include "api/ofo-currency.h"
