@@ -80,6 +80,7 @@
    - ofaIDBModel: update get a #ofaIGetter instead of a ofaHub (todo #1288).
    - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
    - ofaITVColumnable: get rid of ofaSettings usage.
+   - ofaITVSortable: get rid of ofaSettings usage.
    - ofaMiscAuditStore: new class.
    - ofaMiscAuditTreeview: new class.
    - ofaMySQLMeta class is renamed to ofaMysqlDossierMeta (todo #1277).
